--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,30 +2,33 @@
 
 name: Run abcd.py Manually
 
-# This allows you to run this workflow manually from the Actions tab
 on:
   workflow_dispatch:
 
 jobs:
   run-scraper:
-    runs-on: ubuntu-latest # Use a Linux runner
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v4 # Fetches your code
+      - name: Check out repository code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10' # Specify your desired Python version
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install playwright
+          playwright install --with-deps
 
-    - name: Install Playwright browsers and dependencies
-      run: playwright install --with-deps # Installs browsers (like Chromium) and OS dependencies
+      - name: Run Python script
+        run: python abcd.py
 
-    - name: Run Python script
-      run: python abcd.py # Execute your script
+      - name: Upload scraped leads.txt as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: scraped-links
+          path: leads.txt
